Implement live button feedback for the go-no-go task

--- a/config/kana_MID.cfg
+++ b/config/kana_MID.cfg
@@ -41,6 +41,9 @@ PreprocessingFuncName = preprocess_key
 [NiDaqOutputModule]
 DaqDeviceId = Dev2
 
+[NiDaqInputModule]
+DaqDeviceId = Dev2
+
 [UdpOutputModule]
 ReceiverIPAddress = localhost
 ReceiverPortNum = 10070
