--- a/config/kana_oddball.cfg
+++ b/config/kana_oddball.cfg
@@ -12,10 +12,10 @@ ChartXWidth = 10
 ChartYChannelWidth = 10
 NumChannelsDisplayed = 5
 ScriptLanguage = MATLAB
-InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/initialize_pre_test_kana.m
-PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/preprocess_test_kana.m
-InitializingFuncName = initialize_pre_test_kana
-PreprocessingFuncName = preprocess_test_kana
+InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/oddball/initialize_oddball.m
+PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/oddball/preprocess_oddball.m
+InitializingFuncName = initialize_oddball
+PreprocessingFuncName = preprocess_oddball
 
 [LSL-DAQ-1]
 ChannelUse = 1,1,1,1
@@ -33,12 +33,15 @@ ChartXWidth = 10
 ChartYChannelWidth = 10
 NumChannelsDisplayed = 1
 ScriptLanguage = MATLAB
-InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/initialize_pre_key.m
-PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/preprocess_key.m
-InitializingFuncName = initialize_pre_key
+InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/oddball/initialize_key.m
+PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/oddball/preprocess_key.m
+InitializingFuncName = initialize_key
 PreprocessingFuncName = preprocess_key
 
 [NiDaqOutputModule]
+DaqDeviceId = Dev2
+
+[NiDaqInputModule]
 DaqDeviceId = Dev2
 
 [UdpOutputModule]
