--- a/config/kana_resting_seri.cfg
+++ b/config/kana_resting_seri.cfg
@@ -2,7 +2,7 @@
 RequiredStreams = @Invalid()
 
 [U-BCI]
-PostprocessingModules = gonogo
+PostprocessingModules = resting
 MaxSamplesInChart = 1000
 
 [EGI NetAmp 0]
@@ -29,19 +29,19 @@ ChartXWidth = 10
 ChartYChannelWidth = 10
 NumChannelsDisplayed = 1
 ScriptLanguage = MATLAB
-InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/goNoGo/initialize_key.m
-PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/goNoGo/preprocess_key.m
+InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/resting_seri/initialize_key.m
+PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/resting_seri/preprocess_key.m
 InitializingFuncName = initialize_key
 PreprocessingFuncName = preprocess_key
 
-[gonogo]
+[resting]
 InputStreamData = LSL-DAQ-1
 ScriptLanguage = MATLAB
-InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/goNoGo/initialize_goNoGo.m
-PostprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/goNoGo/postprocess_goNoGo.m
+InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/resting_seri/initialize_resting.m
+PostprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/resting_seri/postprocess_resting.m
 ShowLog = 1
-InitializingFuncName = initialize_goNoGo
-PostprocessingFuncName = postprocess_goNoGo
+InitializingFuncName = initialize_resting
+PostprocessingFuncName = postprocess_resting
 
 [NiDaqOutputModule]
 DaqDeviceId = Dev2
