--- a/config/kana_MID.cfg
+++ b/config/kana_MID.cfg
@@ -2,6 +2,7 @@
 RequiredStreams = @Invalid()
 
 [U-BCI]
+PostprocessingModules = MID
 MaxSamplesInChart = 1000
 
 [EGI NetAmp 0]
@@ -11,11 +12,6 @@ ChartDisplay = 1
 ChartXWidth = 10
 ChartYChannelWidth = 10
 NumChannelsDisplayed = 5
-ScriptLanguage = MATLAB
-InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/monetaryIncentiveDelay/initialize_MID.m
-PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/monetaryIncentiveDelay/preprocess_MID.m
-InitializingFuncName = initialize_MID
-PreprocessingFuncName = preprocess_MID
 
 [LSL-DAQ-1]
 ChannelUse = 1,1,1,1
@@ -33,15 +29,21 @@ ChartXWidth = 10
 ChartYChannelWidth = 10
 NumChannelsDisplayed = 1
 ScriptLanguage = MATLAB
-InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/monetaryIncentiveDelay/initialize_key.m
-PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/monetaryIncentiveDelay/preprocess_key.m
+InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/MID/initialize_key.m
+PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/MID/preprocess_key.m
 InitializingFuncName = initialize_key
 PreprocessingFuncName = preprocess_key
 
-[NiDaqOutputModule]
-DaqDeviceId = Dev2
+[MID]
+InputStreamData = LSL-DAQ-1
+ScriptLanguage = MATLAB
+InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/MID/initialize_MID.m
+PostprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/MID/postprocess_MID.m
+ShowLog = 1
+InitializingFuncName = initialize_MID
+PostprocessingFuncName = postprocess_MID
 
-[NiDaqInputModule]
+[NiDaqOutputModule]
 DaqDeviceId = Dev2
 
 [UdpOutputModule]
