--- a/config/kana_oddball.cfg
+++ b/config/kana_oddball.cfg
@@ -2,6 +2,7 @@
 RequiredStreams = @Invalid()
 
 [U-BCI]
+PostprocessingModules = oddball
 MaxSamplesInChart = 1000
 
 [EGI NetAmp 0]
@@ -11,11 +12,6 @@ ChartDisplay = 1
 ChartXWidth = 10
 ChartYChannelWidth = 10
 NumChannelsDisplayed = 5
-ScriptLanguage = MATLAB
-InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/oddball/initialize_oddball.m
-PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/oddball/preprocess_oddball.m
-InitializingFuncName = initialize_oddball
-PreprocessingFuncName = preprocess_oddball
 
 [LSL-DAQ-1]
 ChannelUse = 1,1,1,1
@@ -38,10 +34,16 @@ PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/oddball/
 InitializingFuncName = initialize_key
 PreprocessingFuncName = preprocess_key
 
-[NiDaqOutputModule]
-DaqDeviceId = Dev2
+[oddball]
+InputStreamData = LSL-DAQ-1
+ScriptLanguage = MATLAB
+InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/goNoGo/initialize_oddball.m
+PostprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/goNoGo/postprocess_oddball.m
+ShowLog = 1
+InitializingFuncName = initialize_oddball
+PostprocessingFuncName = postprocess_oddball
 
-[NiDaqInputModule]
+[NiDaqOutputModule]
 DaqDeviceId = Dev2
 
 [UdpOutputModule]
