Add postprocessing configuration for Oddball task in kana_stroop.cfg

--- a/config/kana_stroop.cfg
+++ b/config/kana_stroop.cfg
@@ -2,6 +2,7 @@
 RequiredStreams = @Invalid()
 
 [U-BCI]
+PostprocessingModules = stroop
 MaxSamplesInChart = 1000
 
 [EGI NetAmp 0]
@@ -11,11 +12,6 @@ ChartDisplay = 1
 ChartXWidth = 10
 ChartYChannelWidth = 10
 NumChannelsDisplayed = 5
-ScriptLanguage = MATLAB
-InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/stroop/initialize_stroop.m
-PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/stroop/preprocess_stroop.m
-InitializingFuncName = initialize_stroop
-PreprocessingFuncName = preprocess_stroop
 
 [LSL-DAQ-1]
 ChannelUse = 1,1,1,1
@@ -38,10 +34,16 @@ PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/stroop/p
 InitializingFuncName = initialize_key
 PreprocessingFuncName = preprocess_key
 
-[NiDaqOutputModule]
-DaqDeviceId = Dev2
+[oddball]
+InputStreamData = LSL-DAQ-1
+ScriptLanguage = MATLAB
+InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/goNoGo/initialize_stroop.m
+PostprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/goNoGo/postprocess_stroop.m
+ShowLog = 1
+InitializingFuncName = initialize_stroop
+PostprocessingFuncName = postprocess_stroop
 
-[NiDaqInputModule]
+[NiDaqOutputModule]
 DaqDeviceId = Dev2
 
 [UdpOutputModule]
