--- a/config/kana_resting.cfg
+++ b/config/kana_resting.cfg
@@ -2,6 +2,7 @@
 RequiredStreams = @Invalid()
 
 [U-BCI]
+PostprocessingModules = resting
 MaxSamplesInChart = 1000
 
 [EGI NetAmp 0]
@@ -11,11 +12,6 @@ ChartDisplay = 1
 ChartXWidth = 10
 ChartYChannelWidth = 10
 NumChannelsDisplayed = 5
-ScriptLanguage = MATLAB
-InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/resting/initialize_resting.m
-PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/resting/preprocess_resting.m
-InitializingFuncName = initialize_resting
-PreprocessingFuncName = preprocess_resting
 
 [LSL-DAQ-1]
 ChannelUse = 1,1,1,1
@@ -37,6 +33,15 @@ InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/resting/i
 PreprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/resting/preprocess_key.m
 InitializingFuncName = initialize_key
 PreprocessingFuncName = preprocess_key
+
+[resting]
+InputStreamData = LSL-DAQ-1
+ScriptLanguage = MATLAB
+InitializingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/resting/initialize_resting.m
+PostprocessingScriptPath = C:/Users/UshibaLab/01-individuals/matsuyanagi/resting/postprocess_resting.m
+ShowLog = 1
+InitializingFuncName = initialize_resting
+PostprocessingFuncName = postprocess_resting
 
 [NiDaqOutputModule]
 DaqDeviceId = Dev2
